--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 body {
     display: flex;
-    flex-direction: column; /* so captured pieces can be on top/bottom */
+    flex-direction: column; 
     justify-content: center;
     align-items: center;
     height: 100vh;
